--- a/coursework_oop/coursework_oop.csproj
+++ b/coursework_oop/coursework_oop.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="databases\" />
+  </ItemGroup>
+
 </Project>
