--- a/coursework_oop/coursework_oop.csproj
+++ b/coursework_oop/coursework_oop.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <Folder Include="databases\" />
+    <Folder Include="Новая папка1\" />
+    <Folder Include="Новая папка\" />
   </ItemGroup>
 
 </Project>
