Связывание функционала кнопок создать и открыть с кодом

--- a/coursework_oop/coursework_oop.csproj
+++ b/coursework_oop/coursework_oop.csproj
@@ -9,13 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.3" />
+    <Compile Remove="databases\**" />
+    <Compile Remove="Новая папка1\**" />
+    <Compile Remove="Новая папка\**" />
+    <EmbeddedResource Remove="databases\**" />
+    <EmbeddedResource Remove="Новая папка1\**" />
+    <EmbeddedResource Remove="Новая папка\**" />
+    <None Remove="databases\**" />
+    <None Remove="Новая папка1\**" />
+    <None Remove="Новая папка\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="databases\" />
-    <Folder Include="Новая папка1\" />
-    <Folder Include="Новая папка\" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
