--- a/coursework_oop/coursework_oop.csproj
+++ b/coursework_oop/coursework_oop.csproj
@@ -11,17 +11,18 @@
   <ItemGroup>
     <Compile Remove="databases\**" />
     <Compile Remove="Новая папка1\**" />
-    <Compile Remove="Новая папка\**" />
     <EmbeddedResource Remove="databases\**" />
     <EmbeddedResource Remove="Новая папка1\**" />
-    <EmbeddedResource Remove="Новая папка\**" />
     <None Remove="databases\**" />
     <None Remove="Новая папка1\**" />
-    <None Remove="Новая папка\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="images\" />
   </ItemGroup>
 
 </Project>
